# construction-accident-annotator

./: .gitignore  CHANGELOG.md  COLLABORATION_GUIDE.md  CONTRIBUTING.md  GB-T4757-2017.md  LICENSE  README.md  construction_categories.py  construction_keywords.py  hints.py  main.py  merge_annotations.py  pyproject.toml  utils.py  启动标注工具.bat  启动标注工具.command  如何启动.txt  快速入门.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/annotated/: .gitkeep  accident_cases_annotated_lizhijie_hint_model.json
data/config/: keyword_seeds.json
data/raw/: .gitkeep
screenshots/: README.md
scripts/: evaluate_enhancement.py  evaluate_supervised.py
